Intro and Suggested Reading draft
Draft with a brief intro, the first section (Installation + setup), and
a final section on additional material (basically my email to the group
from Sept 2)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ PDF/mesa_wd_tutorial.tex
 PDF/mesa_wd_tutorial.aux
 PDF/mesa_wd_tutorial.synctex.gz
 PDF/mesa_wd_tutorial.log
+PDF/mesa_wd_tutorial.out
