--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-PDF/mesa_wd_tutorial.toc
-PDF/mesa_wd_tutorial.tex
-PDF/mesa_wd_tutorial.aux
-PDF/mesa_wd_tutorial.synctex.gz
-PDF/mesa_wd_tutorial.log
-PDF/mesa_wd_tutorial.out
+PDF/*
+wd2/*
