Playing with custom network
No significant changes to the files in this commit, just for posterity.

NOTE: MESA_DIR in inlist and makefile are custom defined to point to my
old version of MESA (6794). Comment these lines out on other machines.

--- a/novaPractice/make/makefile
+++ b/novaPractice/make/makefile
@@ -1,4 +1,4 @@
-!MESA_DIR = ../../../../../../mesa-olds/mesa-6794
+MESA_DIR = ../../../../../../mesa-olds/mesa-6794
 
 include $(MESA_DIR)/star/work_standard_makefile
 
